--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.1.1",
     "rxjs": "^5.0.1",
     "semantic-ui": "^2.2.7",
+    "tinymce": "^4.5.2",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
